--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,4 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 
+IPLocator_ApiKey = "afcddd6bfbb6a79d0dfad606fad449bbb491cd07f89833d312ae16e7"
