--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,6 @@ apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs.kotlin"
 
 
-
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
@@ -22,7 +21,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
-        debug{
+        debug {
             buildConfigField('String', "ApiKey", IPLocator_ApiKey)
         }
         release {
@@ -38,11 +37,20 @@ android {
     }
 }
 
+def gson_version = "2.6.2"
+def retrofit2_version = "2.5.0"
+def okhttp3_version = "3.12.0"
+def kotlinCoroutineVersion = "1.0.1"
+def livedata_ktx = "2.2.0"
+def koin_version = "2.0.1"
+def navigation = "2.2.0"
+
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.1.0'
+    implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
@@ -51,13 +59,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    def gson_version = "2.6.2"
-    def retrofit2_version = "2.5.0"
-    def okhttp3_version = "3.12.0"
-    def kotlinCoroutineVersion = "1.0.1"
-    def livedata_ktx = "2.2.0"
-    def koin_version = "2.0.1"
-    def navigation = "2.2.0"
+
+    //Material Design
+    implementation "com.google.android.material:material:1.2.0-alpha04"
 
 
     //Google Play Services
