--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,9 +104,12 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
+    //RxJava2
+    implementation "io.reactivex.rxjava2:rxjava:2.2.16"
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+
     //Timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
-
 
     //Maps
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
