Ui updated, error handling corrected

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,9 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    testOptions{
+        unitTests.returnDefaultValues = true
+    }
     buildTypes {
         debug {
             buildConfigField('String', "ApiKey", IPLocator_ApiKey)
@@ -55,8 +58,13 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+
+    //Testing
+    testImplementation 'org.mockito:mockito-inline:2.21.0'
+    testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.5.0'
+
+    //Android Testing
+    androidTestImplementation 'org.mockito:mockito-android:2.21.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 
@@ -78,8 +86,6 @@ dependencies {
     //Okhttp3
     implementation "com.squareup.okhttp3:okhttp:$okhttp3_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3_version"
-
-
 
 
     //Kotlin Coroutines
@@ -113,5 +119,6 @@ dependencies {
 
     //Maps
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
 
 }
