--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,10 +62,12 @@ dependencies {
     //Testing
     testImplementation 'org.mockito:mockito-inline:2.21.0'
     testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.5.0'
+    testImplementation 'junit:junit:4.12'
 
     //Android Testing
     androidTestImplementation 'org.mockito:mockito-android:2.21.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
 
 
     //Material Design
@@ -109,16 +111,13 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-
-    //RxJava2
-    implementation "io.reactivex.rxjava2:rxjava:2.2.16"
-    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+    
 
     //Timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
     //Maps
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
 
 }
