cleaned up code

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,8 @@ dependencies {
     testImplementation 'org.mockito:mockito-inline:2.21.0'
     testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.5.0'
     testImplementation 'junit:junit:4.12'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+
 
     //Android Testing
     androidTestImplementation 'org.mockito:mockito-android:2.21.0'
