--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.example.jeff.iplocator"
+        applicationId "com.example.brownjeff.iplocator"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
